--- a/Projeto_01_Analisando_os_Dados_do_Airbnb_Rio_de_Janeiro.ipynb
+++ b/Projeto_01_Analisando_os_Dados_do_Airbnb_Rio_de_Janeiro.ipynb
@@ -2628,6 +2628,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Com este gráfico de quantidade de imóveis com indicação do preço podemos ter uma visão de onde ocorrem as maiores demandas. Podemos ver uma grande concentração na Região Sul do Rio englobando Copacabana, Ipanema, Leblon. Também podemos ver um pequeno aglomerado em Jacarepaguá e na Barra da Tijuca.\n",
+        "\n",
+        "Neste outro gráfico podemos ver os bairros com a marcação de pontos turísticos\n",
+        "\n",
+        "\n",
+        "A maior procura encontra-se na Zona Sul. Trata-se da região mais turística do Rio, onde ficam as praias e os hotéis mais famosos da cidade. Além do mar, suas outras atrações turísticas incluem: Lagoa Rodrigo de Freitas, Parque Penhasco Dois Irmãos, Cristo Redentor, Jardim Botânico, Pão de Açúcar e boa parte do Aterro do Flamengo. \n",
+        "\n",
+        "A segunda maior procura encontra-se na Zona Oeste. É a segunda região mais populosa do Rio e onde estão vias como a Linha Amarela e a maior parte dos corredores de BRT, que ligam essa parte da cidade à Zona Sul e ao centro. Seu bairro mais procurado é a Barra da Tijuca, onde há enormes empreendimentos residenciais. Entre as atrações turísticas da região estão a Lagoa da Tijuca, o Parque Estadual da Pedra Branca e as praias da Barra da Tijuca, Pontal e Joatinga."
+      ],
+      "metadata": {
+        "id": "GDzlC4oIr1RP"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UxVJqJ_3W59I",
@@ -2761,9 +2777,13 @@
         "id": "rbZ3Hsy9Ypw8"
       },
       "source": [
-        "Foi feita apenas uma análise superficial na base de dados do Airbnb, porém já se percebeu que existem *outliers* em algumas das variáveis. \n",
+        "  Através de uma simples análise, limpeza e com uma versão simplificada de conjuntos de dados conseguimos extrair informações valiosas. Tentei ao máximo ponderar o trabalho para que não ficasse muito técnico, mas também não quis deixar mostrar algumas etapas essenciais. O projeto completo com mais detalhes e com o código encontra-se no meu GitHub. Pela análise técnica trabalhamos com importação, verificação, análise e a limpeza do dataset. Pela análise exploratória verificamos o resumo estatístico, os tipos de acomodação disponíveis, mínimo de noites para estadia, top 10 barros mais alugados, mais caros e mais baratos. Conseguimos enxergar tudo isso visualmente em gráficos de barras e depois de maneira geral no mapa do município do Rio de Janeiro.\n",
+        "  A ideia futura é expandir esse trabalho na versão mais complexa do dataset disponibilizado pelo Airbnbn com quase 25 mil linhas e 74 variáveis (colunas), aumentando a quantidade e qualidade das informações. Outra opção é expandir esse trabalho de análise para outras cidades ao redor do mundo.\n",
         "\n",
-        "Também se notou que em algumas localidades há poucos imóveis disponíveis, o que pode distorcer as informações estatísticas de alguns atributos.\n"
+        "  Por fim, após o mergulho nos dados, percebi o quanto foi possível conhecer mais e melhor sobre a cidade de Montreal e, acredito ter sido um ótimo exercício de extração de valor dos dados para auxiliar no planejamento de uma futura viagem.\n",
+        "\n",
+        "  Mesmo tendo que dividir meu tempo com estudos, faculdade e trabalho pude concluir esse projeto. Me sinto muito gratificado, foi um trabalho incrível sobre uma cidade maravilhosa e um ótimo exercício de extração de valor dos dados para auxiliar no planejamento de uma futura viagem para o Rio, pretendo fazer esse exercicio quando for me aventurar em outros países.\n",
+        "\n"
       ]
     }
   ]
